deploy: 524e92e01cb94fa4ef1efcf29ea02ccf64ec634a

--- a/_sources/markdown-notebooks.ipynb
+++ b/_sources/markdown-notebooks.ipynb
@@ -2,68 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0e1ef45",
+   "id": "16b79f98",
    "metadata": {},
    "source": [
-    "# Notebooks with MyST Markdown\n",
+    "# ¿Qué es el diseño web?\n",
+    "<img src=\"https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1\" />\n",
+    "<h2>\n",
+    "    El diseño web es la actividad que consiste en:\n",
+    "</h2>\n",
+    "<ul>\n",
+    "    <li style=\"color:#67686A;\">Planificación de páginas webs.</li>\n",
+    "    <li style=\"color:#67686A;\">Diseño de páginas webs.</li>\n",
+    "    <li style=\"color:#67686A;\">Mantenimiento de páginas webs.</li>\n",
+    "    <li style=\"color:#67686A;\">Creación de páginas webs.</li>\n",
+    "    <li style=\"color:#67686A;\">Diseño de la interfaz de las páginas webs.</li>\n",
+    "    <li style=\"color:#67686A;\">Diseño del material gráfico.</li>\n",
+    "    <li style=\"color:#67686A;\">Experiencia del usuario en el sitio web.</li>\n",
+    "</ul>\n",
+    "<p style=\"color:#67686A; font-weight:bold; text-align:justify;\">\n",
+    "    El diseño web consiste en planificación, diseño e implementación de sitios web. Dentro del diseño web también se abarcan temas como el diseño gráfico, diseño de interfaz, experiencia del usuario, la navegabilidad, interactividad, usabilidad, arquitectura de la información, etc..\n",
+    "</p>\n",
     "\n",
-    "Jupyter Book also lets you write text-based notebooks using MyST Markdown.\n",
-    "See [the Notebooks with MyST Markdown documentation](https://jupyterbook.org/file-types/myst-notebooks.html) for more detailed instructions.\n",
-    "This page shows off a notebook written in MyST Markdown.\n",
-    "\n",
-    "## An example cell\n",
-    "\n",
-    "With MyST Markdown, you can define code cells with a directive like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "fcf8e16b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(2 + 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9c6ac69",
-   "metadata": {},
-   "source": [
-    "When your book is built, the contents of any `{code-cell}` blocks will be\n",
-    "executed with your default Jupyter kernel, and their outputs will be displayed\n",
-    "in-line with the rest of your content.\n",
-    "\n",
-    "```{seealso}\n",
-    "Jupyter Book uses [Jupytext](https://jupytext.readthedocs.io/en/latest/) to convert text-based files to notebooks, and can support [many other text-based notebook files](https://jupyterbook.org/file-types/jupytext.html).\n",
-    "```\n",
-    "\n",
-    "## Create a notebook with MyST Markdown\n",
-    "\n",
-    "MyST Markdown notebooks are defined by two things:\n",
-    "\n",
-    "1. YAML metadata that is needed to understand if / how it should convert text files to notebooks (including information about the kernel needed).\n",
-    "   See the YAML at the top of this page for example.\n",
-    "2. The presence of `{code-cell}` directives, which will be executed with your book.\n",
-    "\n",
-    "That's all that is needed to get started!\n",
-    "\n",
-    "## Quickly add YAML metadata for MyST Notebooks\n",
-    "\n",
-    "If you have a markdown file and you'd like to quickly add YAML metadata to it, so that Jupyter Book will treat it as a MyST Markdown Notebook, run the following command:\n",
-    "\n",
-    "```\n",
-    "jupyter-book myst init path/to/markdownfile.md\n",
-    "```"
+    "<div style=\"display:flex;\">\n",
+    "    <div><img src=\"https://media.istockphoto.com/photos/website-designer-creative-planning-application-developer-development-picture-id1206638576?b=1&k=20&m=1206638576&s=612x612&w=0&h=wPA8RbwU-lVzESg7O9IXbxpoXClItDDsTDEpkrhXzs0=\"/></div>\n",
+    "    <div><img src=\"https://media.istockphoto.com/photos/designers-drawing-website-ux-app-development-picture-id1196702694?b=1&k=20&m=1196702694&s=612x612&w=0&h=hXgW07jMeHxVl_csoP9QbNociVY5iLALDmAfZBU-JS4=\" /></div>\n",
+    "    <div><img src=\"https://media.istockphoto.com/photos/ux-graphic-designer-creative-sketch-planning-application-process-picture-id1169087529?b=1&k=20&m=1169087529&s=612x612&w=0&h=PA0UMs9JiVGAuVCEYyLAKkHLWkonPC5DMyq8dvKFZEw=\" /></div>\n",
+    "    <div><img src=\"https://media.istockphoto.com/photos/top-view-asian-ux-developer-and-ui-designer-brainstorming-about-app-picture-id1218511457?b=1&k=20&m=1218511457&s=612x612&w=0&h=VZ4UOZtqnu8HpM3Yj08G_GbvyukbV5OdQ-jGRn5SCzE=\" /></div>\n",
+    "    \n",
+    "</div>"
    ]
   }
  ],
@@ -96,9 +62,7 @@
    "version": "3.8.14"
   },
   "source_map": [
-   14,
-   26,
-   28
+   14
   ]
  },
  "nbformat": 4,
